--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,12 +10,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - 
+        name: Checkout code
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
-      - name: Download and install the build wrapper, build the project
+      - 
+        name: Download and install the build wrapper, build the project
         run: |
           mkdir $HOME/.sonar
           curl -sSLo $HOME/.sonar/build-wrapper-linux-x86.zip ${SONAR_HOST_URL}/static/cpp/build-wrapper-linux-x86.zip
@@ -24,12 +26,15 @@ jobs:
         env:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
-      - name: Verify build wrapper output
+      - 
+        name: Verify build wrapper output
         run: |
           ls -lh bw-output
           cat bw-output/build-wrapper-dump.json
+          cat build-wrapper.log
 
-      - name: SonarQube analysis
+      - 
+        name: SonarQube analysis
         uses: SonarSource/sonarqube-scan-action@v1.0.0
         with:
           args: -Dsonar.cfamily.build-wrapper-output=bw-output
