--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,10 +21,12 @@ jobs:
         name: create .sonar folder
         run:  mkdir $HOME/.sonar
 
+      - run: curl -sSLo $HOME/.sonar/build-wrapper-linux-x86.zip https://sonarqube.cicd.splashtop.com/static/cpp/build-wrapper-linux-x86.zip
+
       - 
         name: Download and install the build wrapper, build the project
         run: |
-          curl -sSLo $HOME/.sonar/build-wrapper-linux-x86.zip ${{ secrets.SONAR_HOST_URL }}/static/cpp/build-wrapper-linux-x86.zip
+          # curl -sSLo $HOME/.sonar/build-wrapper-linux-x86.zip ${{ secrets.SONAR_HOST_URL }}/static/cpp/build-wrapper-linux-x86.zip
           unzip -o $HOME/.sonar/build-wrapper-linux-x86.zip -d $HOME/.sonar/
           $HOME/.sonar/build-wrapper-linux-x86/build-wrapper-linux-x86-64 --out-dir bw-output ./build.sh
         env:
