--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,11 +25,12 @@ jobs:
         name: Download and install the build wrapper, build the project
         run: |
           echo ${SONAR_HOST_URL}
-          curl -sSLo $HOME/.sonar/build-wrapper-linux-x86.zip https://sonarqube.cicd.splashtop.com/static/cpp/build-wrapper-linux-x86.zip
+          curl -sSLo $HOME/.sonar/build-wrapper-linux-x86.zip ${SONAR_HOST_URL}/static/cpp/build-wrapper-linux-x86.zip
           unzip -o $HOME/.sonar/build-wrapper-linux-x86.zip -d $HOME/.sonar/
           $HOME/.sonar/build-wrapper-linux-x86/build-wrapper-linux-x86-64 --out-dir bw-output ./build.sh
         env:
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          # SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          SONAR_HOST_URL: "https://sonarqube.cicd.splashtop.com"
 
       - 
         name: Verify build wrapper output
