--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,15 +35,32 @@ jobs:
           cat bw-output/build-wrapper-dump.json
           cat bw-output/build-wrapper.log
 
+      # - 
+      #   name: Download and install the SonarScanner, scan the project
+      #   run: |
+      #     curl -sSLo $HOME/.sonar/sonar-scanner-cli-${{ env.SONAR_SCANNER_VERSION }}-linux.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-linux.zip
+      #     unzip -o $HOME/.sonar/sonar-scanner-cli-${{ env.SONAR_SCANNER_VERSION }}-linux.zip -d $HOME/.sonar/
+      #     echo "sonar.host.url=${SONAR_HOST_URL}" >> $HOME/.sonar/sonar-scanner-${{ env.SONAR_SCANNER_VERSION }}-linux/conf/sonar-scanner.properties
+      #     $HOME/.sonar/sonar-scanner-${{ env.SONAR_SCANNER_VERSION }}-linux/bin/sonar-scanner -h
+      #     $HOME/.sonar/sonar-scanner-${{ env.SONAR_SCANNER_VERSION }}-linux/bin/sonar-scanner -Dsonar.login=${SONAR_TOKEN}
+      #   env:
+      #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #     SONAR_SCANNER_VERSION: 4.6.2.2472
+
       - 
-        name: Download and install the SonarScanner, scan the project
-        run: |
-          curl -sSLo $HOME/.sonar/sonar-scanner-cli-${{ env.SONAR_SCANNER_VERSION }}-linux.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-linux.zip
-          unzip -o $HOME/.sonar/sonar-scanner-cli-${{ env.SONAR_SCANNER_VERSION }}-linux.zip -d $HOME/.sonar/
-          echo "sonar.host.url=${SONAR_HOST_URL}" >> $HOME/.sonar/sonar-scanner-${{ env.SONAR_SCANNER_VERSION }}-linux/conf/sonar-scanner.properties
-          $HOME/.sonar/sonar-scanner-${{ env.SONAR_SCANNER_VERSION }}-linux/bin/sonar-scanner -h
-          $HOME/.sonar/sonar-scanner-${{ env.SONAR_SCANNER_VERSION }}-linux/bin/sonar-scanner -Dsonar.login=${SONAR_TOKEN}
+        name: Download and install the SonarScanner
         env:
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_SCANNER_VERSION: 4.6.2.2472
+        run: |
+          curl -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-${{ env.SONAR_SCANNER_VERSION }}-linux.zip
+          unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
+          echo "$HOME/.sonar/sonar-scanner-${{ env.SONAR_SCANNER_VERSION }}-linux/bin" >> $GITHUB_PATH
+
+      - 
+        name: SonarQube analysis
+        run: |
+          sonar-scanner --define sonar.cfamily.build-wrapper-output=bw-output  
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
